fixed alignment issues, map alignemnt fix

--- a/css/style.css
+++ b/css/style.css
@@ -953,7 +953,7 @@ img.with-border{
 /* 06.2.1 Main Slider Flexslider Control Nav & Paging */
 /* ----------------------------------------------*/
 #main-slider .flex-control-nav, .flex-control-paging{
-	 background-color:transparent; !important;
+	 background-color:transparent !important;
 	 margin:0; padding:0;
 	 position:absolute;
 	 bottom:0;
@@ -3836,5 +3836,6 @@ footer .image-divider.fixed-height{
 	color:#FFF; 
 	letter-spacing:3px; 
 	margin-top:10px;
+}
 }
 }
